players cards added

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
             <img class="" src="./images/header-img2.png" alt="">
         </div>
         <div class="text-center my-36 w-1/2 mr-28">
-            <h1 style="font-family: 'Berkshire Swash', cursive;" class="text-7xl text-[#FF5E19]">Choose Your Best Five
+            <h1 style="font-family: 'Berkshire Swash', cursive;" class="text-7xl text-[#FF5E19] mb-5">Choose Your Best
+                Five
             </h1>
-            <p class="text-base text-white">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+            <p class="text-base text-white">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                Velit officia
                 consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         </div>
         <div class="flex items-end justify-end">
@@ -29,6 +31,60 @@
             <img class="absolute" src="./images/football.png" alt="">
         </div>
     </header>
+
+    <!-- players -->
+    <section class="bg-[#151515] py-24">
+        <div class="grid grid-cols-3 gap-4">
+            <div class="mx-auto border pb-6">
+                <img src="./images/players/player-1.png" alt="">
+                <div class="text-center">
+                    <h5 class="text-center text-xl font-semibold text-white my-5">Lionel Messi</h5>
+                    <button class=" px-20 py-2.5 bg-[#015196] text-white font-semibold">SELECT</button>
+                </div>
+            </div>
+            <div class="mx-auto border pb-6">
+                <img src="./images/players/player-2.png" alt="">
+                <div class="text-center">
+                    <h5 class="text-center text-xl font-semibold text-white my-5">Neymar Jr</h5>
+                    <button class=" px-20 py-2.5 bg-[#015196] text-white font-semibold">SELECT</button>
+                </div>
+            </div>
+            <div class="mx-auto border pb-6">
+                <img src="./images/players/player-3.png" alt="">
+                <div class="text-center">
+                    <h5 class="text-center text-xl font-semibold text-white my-5">Kylian Mbappé</h5>
+                    <button class=" px-20 py-2.5 bg-[#015196] text-white font-semibold">SELECT</button>
+                </div>
+            </div>
+            <div class="mx-auto border pb-6">
+                <img src="./images/players/player-4.png" alt="">
+                <div class="text-center">
+                    <h5 class="text-center text-xl font-semibold text-white my-5">Vítor Machado</h5>
+                    <button class=" px-20 py-2.5 bg-[#015196] text-white font-semibold">SELECT</button>
+                </div>
+            </div>
+            <div class="mx-auto border pb-6">
+                <img src="./images/players/player-5.png" alt="">
+                <div class="text-center">
+                    <h5 class="text-center text-xl font-semibold text-white my-5">Sergio Ramos</h5>
+                    <button class=" px-20 py-2.5 bg-[#015196] text-white font-semibold">SELECT</button>
+                </div>
+            </div>
+            <div class="mx-auto border pb-6">
+                <img src="./images/players/player-6.png" alt="">
+                <div class="text-center">
+                    <h5 class="text-center text-xl font-semibold text-white my-5">Renato Sanches</h5>
+                    <button class=" px-20 py-2.5 bg-[#015196] text-white font-semibold">SELECT</button>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="bg-[#0D0D0D] w-[16.5rem] h-[23rem]">
+                <h2 class="text-4xl">Selected - V</h2>
+            </div>
+            <div></div>
+        </div>
+    </section>
 </body>
 
 </html>
