--- a/index.html
+++ b/index.html
@@ -90,30 +90,30 @@
                 <div>
                     <div class="flex items-center justify-around text-white">
                         <p class="text-white text-xl">Per Player </p>
-                        <input class="bg-[#0D0D0D] border outline-0 w-[121px] p-1.5 my-8" type="text">
+                        <input id="per-player-flield" class="bg-[#0D0D0D] border outline-0 w-[121px] p-1.5 my-8" type="text">
                     </div>
                     <div class="text-center">
-                        <button class="mb-8 px-20 py-2.5 bg-[#015196] text-white font-semibold">Calculate</button>
+                        <button id="btn-calculate" class="mb-8 px-20 py-2.5 bg-[#015196] text-white font-semibold">Calculate</button>
                     </div>
                 </div>
                 <div class="flex justify-around items-center text-white text-xl">
                     <span class="mr-6">Player Expense</span>
-                    <p>$<span>00</span></p>
+                    <p>$<span id="player-expense">00</span></p>
                 </div>
                 <div class="flex items-center justify-around text-white">
                     <p class="text-white text-xl">Manager</p>
-                    <input class="bg-[#0D0D0D] border outline-0 w-[121px] p-1.5 my-8" type="text">
+                    <input id="manager" class="bg-[#0D0D0D] border outline-0 w-[121px] p-1.5 my-8" type="text">
                 </div>
                 <div class="flex items-center justify-around text-white">
                     <p class="text-white text-xl">Coach</p>
-                    <input class="bg-[#0D0D0D] border outline-0 w-[121px] p-1.5 my-8" type="text">
+                    <input id="coach" class="bg-[#0D0D0D] border outline-0 w-[121px] p-1.5 my-8" type="text">
                 </div>
                 <div class="text-center">
-                    <button class="mb-8 px-20 py-2.5 bg-[#015196] text-white font-semibold">Total</button>
+                    <button id="calculate-total-btn" class="mb-8 px-20 py-2.5 bg-[#015196] text-white font-semibold">Total</button>
                 </div>
                 <div class="flex justify-around items-center text-white text-xl">
                     <span class="mr-6">Total</span>
-                    <p class="text-[#FF5E19]">$<span>00</span></p>
+                    <p class="text-[#FF5E19]">$<span id="total-money">00</span></p>
                 </div>
             </div>
             
