some error handling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Budget - Players</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,9 +18,9 @@
         <div class="flex self-end">
             <img class="" src="./images/header-img2.png" alt="">
         </div>
-        <div class="text-center my-36 w-1/2 mr-28">
+        <div class="text-center my-36 mr-28">
             <h1 style="font-family: 'Berkshire Swash', cursive;" class="text-7xl text-[#FF5E19] mb-5">Choose Your Best
-                Five
+                Footballers
             </h1>
             <p class="text-base text-white">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
                 Velit officia
